lexer/parser.output
   0  $accept : %entry% $end

   1  program : declaration_list EOF

   2  declaration_list : declaration
   3                   | declaration_list declaration

   4  declaration : variable_declaration
   5              | function_declaration
   6              | function_definition

   7  variable_declaration : fulltype declarator_list SEMICOLON

   8  declarator_list : declarator
   9                  | declarator_list COMMA declarator

  10  fulltype : basic_type pointer

  11  basic_type : INT
  12             | CHAR
  13             | BOOL
  14             | DOUBLE

  15  pointer :
  16          | pointer TIMES

  17  declarator : ID table

  18  table :
  19        | L_BRACK constant_expression R_BRACK

  20  function_declaration : fulltype ID L_PAREN parameter_list R_PAREN SEMICOLON
  21                       | VOID ID L_PAREN parameter_list R_PAREN SEMICOLON

  22  function_definition : fulltype ID L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE
  23                      | VOID ID L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE

  24  parameter_list :
  25                 | parameter
  26                 | parameter_list COMMA parameter

  27  parameter : BYREF fulltype ID
  28            | fulltype ID

  29  declaration_list_empty :
  30                         | declaration_list_empty declaration

  31  statement_list :
  32                 | statement_list statement

  33  statement : SEMICOLON
  34            | expression SEMICOLON
  35            | L_BRACE statement_list R_BRACE
  36            | IF L_PAREN expression R_PAREN statement else_statement
  37            | ID DDOT FOR L_PAREN empty_expression SEMICOLON empty_expression SEMICOLON empty_expression R_PAREN statement
  38            | FOR L_PAREN empty_expression SEMICOLON empty_expression SEMICOLON empty_expression R_PAREN statement
  39            | CONTINUE empty_id SEMICOLON
  40            | BREAK empty_id SEMICOLON
  41            | RETURN empty_expression SEMICOLON

  42  else_statement :
  43                 | ELSE statement

  44  empty_expression :
  45                   | expression

  46  empty_id :
  47           | ID

  48  expression : ID
  49             | L_PAREN expression R_PAREN
  50             | TRUE
  51             | FALSE
  52             | NULL
  53             | CONST_I
  54             | CONST_C
  55             | CONST_F
  56             | CONST_S
  57             | ID L_PAREN expression_list R_PAREN
  58             | expression L_BRACK expression R_BRACK
  59             | unary_expression
  60             | binary_expression
  61             | unary_assignment
  62             | binary_assignment
  63             | L_PAREN fulltype R_PAREN expression
  64             | expression QUE expression DDOT expression
  65             | NEW fulltype
  66             | NEW fulltype L_BRACK expression R_BRACK
  67             | DELETE expression

  68  expression_list :
  69                  | expression_list COMMA expression

  70  constant_expression : expression

  71  unary_expression : AND expression
  72                   | TIMES expression
  73                   | PLUS expression
  74                   | MINUS expression
  75                   | EXC expression

  76  binary_expression : expression TIMES expression
  77                    | expression DIV expression
  78                    | expression MOD expression
  79                    | expression PLUS expression
  80                    | expression MINUS expression
  81                    | expression LESS expression
  82                    | expression MORE expression
  83                    | expression LEQ expression
  84                    | expression GEQ expression
  85                    | expression EQ expression
  86                    | expression NEQ expression
  87                    | expression LOGICAL_AND expression
  88                    | expression LOGICAL_OR expression
  89                    | expression COMMA expression

  90  unary_assignment : expression INCR
  91                   | expression DECR
  92                   | INCR expression
  93                   | DECR expression

  94  binary_assignment : expression ASSIGN expression
  95                    | expression TIMESEQ expression
  96                    | expression DIVEQ expression
  97                    | expression MODEQ expression
  98                    | expression PLUSEQ expression
  99                    | expression MINUSEQ expression

 100  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (100)

	BOOL  shift 3
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	VOID  shift 7
	.  error

	program  goto 8
	declaration_list  goto 9
	declaration  goto 10
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	fulltype  goto 14
	basic_type  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	basic_type : BOOL .  (13)

	.  reduce 13


state 4
	basic_type : CHAR .  (12)

	.  reduce 12


state 5
	basic_type : DOUBLE .  (14)

	.  reduce 14


state 6
	basic_type : INT .  (11)

	.  reduce 11


state 7
	function_declaration : VOID . ID L_PAREN parameter_list R_PAREN SEMICOLON  (21)
	function_definition : VOID . ID L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (23)

	ID  shift 16
	.  error


state 8
	%entry% : '\001' program .  (100)

	.  reduce 100


state 9
	program : declaration_list . EOF  (1)
	declaration_list : declaration_list . declaration  (3)

	BOOL  shift 3
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	VOID  shift 7
	EOF  shift 17
	.  error

	declaration  goto 18
	variable_declaration  goto 11
	function_declaration  goto 12
	function_definition  goto 13
	fulltype  goto 14
	basic_type  goto 15


state 10
	declaration_list : declaration .  (2)

	.  reduce 2


state 11
	declaration : variable_declaration .  (4)

	.  reduce 4


state 12
	declaration : function_declaration .  (5)

	.  reduce 5


state 13
	declaration : function_definition .  (6)

	.  reduce 6


state 14
	variable_declaration : fulltype . declarator_list SEMICOLON  (7)
	function_declaration : fulltype . ID L_PAREN parameter_list R_PAREN SEMICOLON  (20)
	function_definition : fulltype . ID L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (22)

	ID  shift 19
	.  error

	declarator_list  goto 20
	declarator  goto 21


state 15
	fulltype : basic_type . pointer  (10)
	pointer : .  (15)

	.  reduce 15

	pointer  goto 22


state 16
	function_declaration : VOID ID . L_PAREN parameter_list R_PAREN SEMICOLON  (21)
	function_definition : VOID ID . L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (23)

	L_PAREN  shift 23
	.  error


state 17
	program : declaration_list EOF .  (1)

	.  reduce 1


state 18
	declaration_list : declaration_list declaration .  (3)

	.  reduce 3


state 19
	declarator : ID . table  (17)
	function_declaration : fulltype ID . L_PAREN parameter_list R_PAREN SEMICOLON  (20)
	function_definition : fulltype ID . L_PAREN parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (22)
	table : .  (18)

	L_PAREN  shift 24
	L_BRACK  shift 25
	COMMA  reduce 18
	SEMICOLON  reduce 18

	table  goto 26


state 20
	variable_declaration : fulltype declarator_list . SEMICOLON  (7)
	declarator_list : declarator_list . COMMA declarator  (9)

	COMMA  shift 27
	SEMICOLON  shift 28
	.  error


state 21
	declarator_list : declarator .  (8)

	.  reduce 8


22: shift/reduce conflict (shift 29, reduce 10) on TIMES
state 22
	fulltype : basic_type pointer .  (10)
	pointer : pointer . TIMES  (16)

	TIMES  shift 29
	ID  reduce 10
	ASSIGN  reduce 10
	MORE  reduce 10
	LESS  reduce 10
	PLUS  reduce 10
	MINUS  reduce 10
	DIV  reduce 10
	MOD  reduce 10
	QUE  reduce 10
	DDOT  reduce 10
	COMMA  reduce 10
	SEMICOLON  reduce 10
	R_PAREN  reduce 10
	L_BRACK  reduce 10
	R_BRACK  reduce 10
	EQ  reduce 10
	NEQ  reduce 10
	LEQ  reduce 10
	GEQ  reduce 10
	PLUSEQ  reduce 10
	MINUSEQ  reduce 10
	TIMESEQ  reduce 10
	DIVEQ  reduce 10
	MODEQ  reduce 10
	INCR  reduce 10
	DECR  reduce 10
	LOGICAL_AND  reduce 10
	LOGICAL_OR  reduce 10


state 23
	function_declaration : VOID ID L_PAREN . parameter_list R_PAREN SEMICOLON  (21)
	function_definition : VOID ID L_PAREN . parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (23)
	parameter_list : .  (24)

	BOOL  shift 3
	BYREF  shift 30
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	COMMA  reduce 24
	R_PAREN  reduce 24

	fulltype  goto 31
	basic_type  goto 15
	parameter_list  goto 32
	parameter  goto 33


state 24
	function_declaration : fulltype ID L_PAREN . parameter_list R_PAREN SEMICOLON  (20)
	function_definition : fulltype ID L_PAREN . parameter_list R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (22)
	parameter_list : .  (24)

	BOOL  shift 3
	BYREF  shift 30
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	COMMA  reduce 24
	R_PAREN  reduce 24

	fulltype  goto 31
	basic_type  goto 15
	parameter_list  goto 34
	parameter  goto 33


state 25
	table : L_BRACK . constant_expression R_BRACK  (19)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	constant_expression  goto 53
	expression  goto 54
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 26
	declarator : ID table .  (17)

	.  reduce 17


state 27
	declarator_list : declarator_list COMMA . declarator  (9)

	ID  shift 59
	.  error

	declarator  goto 60


state 28
	variable_declaration : fulltype declarator_list SEMICOLON .  (7)

	.  reduce 7


state 29
	pointer : pointer TIMES .  (16)

	.  reduce 16


state 30
	parameter : BYREF . fulltype ID  (27)

	BOOL  shift 3
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	.  error

	fulltype  goto 61
	basic_type  goto 15


state 31
	parameter : fulltype . ID  (28)

	ID  shift 62
	.  error


state 32
	function_declaration : VOID ID L_PAREN parameter_list . R_PAREN SEMICOLON  (21)
	function_definition : VOID ID L_PAREN parameter_list . R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (23)
	parameter_list : parameter_list . COMMA parameter  (26)

	COMMA  shift 63
	R_PAREN  shift 64
	.  error


state 33
	parameter_list : parameter .  (25)

	.  reduce 25


state 34
	function_declaration : fulltype ID L_PAREN parameter_list . R_PAREN SEMICOLON  (20)
	function_definition : fulltype ID L_PAREN parameter_list . R_PAREN L_BRACE declaration_list_empty statement_list R_BRACE  (22)
	parameter_list : parameter_list . COMMA parameter  (26)

	COMMA  shift 63
	R_PAREN  shift 65
	.  error


state 35
	expression : CONST_C .  (54)

	.  reduce 54


state 36
	expression : CONST_F .  (55)

	.  reduce 55


state 37
	expression : CONST_I .  (53)

	.  reduce 53


state 38
	expression : CONST_S .  (56)

	.  reduce 56


state 39
	expression : DELETE . expression  (67)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 66
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 40
	expression : FALSE .  (51)

	.  reduce 51


state 41
	expression : ID .  (48)
	expression : ID . L_PAREN expression_list R_PAREN  (57)

	L_PAREN  shift 67
	ASSIGN  reduce 48
	MORE  reduce 48
	LESS  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIV  reduce 48
	MOD  reduce 48
	QUE  reduce 48
	DDOT  reduce 48
	COMMA  reduce 48
	SEMICOLON  reduce 48
	R_PAREN  reduce 48
	L_BRACK  reduce 48
	R_BRACK  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LEQ  reduce 48
	GEQ  reduce 48
	PLUSEQ  reduce 48
	MINUSEQ  reduce 48
	TIMESEQ  reduce 48
	DIVEQ  reduce 48
	MODEQ  reduce 48
	INCR  reduce 48
	DECR  reduce 48
	LOGICAL_AND  reduce 48
	LOGICAL_OR  reduce 48


state 42
	expression : NEW . fulltype  (65)
	expression : NEW . fulltype L_BRACK expression R_BRACK  (66)

	BOOL  shift 3
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	.  error

	fulltype  goto 68
	basic_type  goto 15


state 43
	expression : NULL .  (52)

	.  reduce 52


state 44
	expression : TRUE .  (50)

	.  reduce 50


state 45
	unary_expression : PLUS . expression  (73)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 69
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 46
	unary_expression : MINUS . expression  (74)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 70
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 47
	unary_expression : TIMES . expression  (72)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 71
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 48
	unary_expression : AND . expression  (71)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 72
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 49
	unary_expression : EXC . expression  (75)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 73
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 50
	expression : L_PAREN . expression R_PAREN  (49)
	expression : L_PAREN . fulltype R_PAREN expression  (63)

	BOOL  shift 3
	CHAR  shift 4
	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	DOUBLE  shift 5
	FALSE  shift 40
	ID  shift 41
	INT  shift 6
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	fulltype  goto 74
	basic_type  goto 15
	expression  goto 75
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 51
	unary_assignment : INCR . expression  (92)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 76
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 52
	unary_assignment : DECR . expression  (93)

	CONST_C  shift 35
	CONST_F  shift 36
	CONST_I  shift 37
	CONST_S  shift 38
	DELETE  shift 39
	FALSE  shift 40
	ID  shift 41
	NEW  shift 42
	NULL  shift 43
	TRUE  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	AND  shift 48
	EXC  shift 49
	L_PAREN  shift 50
	INCR  shift 51
	DECR  shift 52
	.  error

	expression  goto 77
	unary_expression  goto 55
	binary_expression  goto 56
	unary_assignment  goto 57
	binary_assignment  goto 58


state 53
	table : L_BRACK constant_expression . R_BRACK  (19)

	R_BRACK  shift 78
	.  error


state 54
	expression : expression . L_BRACK expression R_BRACK  (58)
	expression : expression . QUE expression DDOT expression  (64)
	constant_expression : expression .  (70)
	binary_expression : expression . TIMES expression  (76)
	binary_expression : expression . DIV expression  (77)
	binary_expression : expression . MOD expression  (78)
	binary_expression : expression . PLUS expression  (79)
	binary_expression : expression . MINUS expression  (80)
	binary_expression : expression . LESS expression  (81)
	binary_expression : expression . MORE expression  (82)
	binary_expression : expression . LEQ expression  (83)
	binary_expression : expression . GEQ expression  (84)
	binary_expression : expression . EQ expression  (85)
	binary_expression : expression . NEQ expression  (86)
	binary_expression : expression . LOGICAL_AND expression  (87)
	binary_expression : expression . LOGICAL_OR expression  (88)
	binary_expression : expression . COMMA expression  (89)
	unary_assignment : expression . INCR  (90)
	unary_assignment : expression . DECR  (91)
	binary_assignment : expression . ASSIGN expression  (94)
	binary_assignment : expression . TIMESEQ expression  (95)
	binary_assignment : expression . DIVEQ expression  (96)
	binary_assignment : expression . MODEQ expression  (97)
	binary_assignment : expression . PLUSEQ expression  (98)
	binary_assignment : expression . MINUSEQ expression  (99)

	ASSIGN  shift 79
	MORE  shift 80
	LESS  shift 81
	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIV  shift 85
	MOD  shift 86
	QUE  shift 87
	COMMA  shift 88
	L_BRACK  shift 89
	EQ  shift 90
	NEQ  shift 91
	LEQ  shift 92
	GEQ  shift 93
	PLUSEQ  shift 94
	MINUSEQ  shift 95
	TIMESEQ  shift 96
	DIVEQ  shift 97
	MODEQ  shift 98
	INCR  shift 99
	DECR  shift 100
	LOGICAL_AND  shift 101
	LOGICAL_OR  shift 102
	R_BRACK  reduce 70


state 55
	expression : unary_expression .  (59)

	.  reduce 59


state 56
	expression : binary_expression .  (60)

	.  reduce 60


state 57
	expression : unary_assignment .  (61)

	.  reduce 61


state 58
	expression : binary_assignment .  (62)

	.  reduce 62


state 59
	declarator : ID . table  (17)
	table : .  (18)

	L_BRACK  shift 25
	COMMA  reduce 18
	SEMICOLON  reduce 18

	table  goto 26


state 60
	declarator_list : declarator_list COMMA declarator .  (9)

	.  reduce 9


state 61
	parameter : BYREF fulltype . ID  (27)

	ID  shift 103
	.  error


state 62
	parameter : fulltype ID .  (28)

	.  reduce 28


state 63
	parameter_list : parameter_list COMMA . parameter  (26)

	BOOL  shift 3
	BYREF  shift 30
	CHAR  shift 4
	DOUBLE  shift 5
	INT  shift 6
	.  error

	fulltype  goto 31
	basic_type  goto 15
	parameter  goto 104


state 64
	function_declaration : VOID ID L_PAREN parameter_list R_PAREN . SEMICOLON  (21)
	function_definition : VOID ID L_PAREN parameter_list R_PAREN . L_BRACE declaration_list_empty statement_list R_BRACE  (23)

	SEMICOLON  shift 105
	L_BRACE  shift 106
	.  error


state 65
	function_declaration : fulltype ID L_PAREN parameter_list R_PAREN . SEMICOLON  (20)
	function_definition : fulltype ID L_PAREN parameter_list R_PAREN . L_BRACE declaration_list_empty statement_list R_BRACE  (22)

	SEMICOLON  shift 107
	L_BRACE  shift 108
	.  error


state 66
	expression : expression . L_BRACK expression R_BRACK  (58)
	expression : expression . QUE expression DDOT expression  (64)
	expression : DELETE expression .  (67)
	binary_expression : expression . TIMES expression  (76)
	binary_expression : expression . DIV expression  (77)
	binary_expression : expression . MOD expression  (78)
	binary_expression : expression . PLUS expression  (79)
	binary_expression : expression . MINUS expression  (80)
	binary_expression : expression . LESS expression  (81)
	binary_expression : expression . MORE expression  (82)
	binary_expression : expression . LEQ expression  (83)
	binary_expression : expression . GEQ expression  (84)
	binary_expression : expression . EQ expression  (85)
	binary_expression : expression . NEQ expression  (86)
	binary_expression : expression . LOGICAL_AND expression  (87)
	binary_expression : expression . LOGICAL_OR expression  (88)
	binary_expression : expression . COMMA expression  (89)
	unary_assignment : expression . INCR  (90)
	unary_assignment : expression . DECR  (91)
	binary_assignment : expression . ASSIGN expression  (94)
	binary_assignment : expression . TIMESEQ expression  (95)
	binary_assignment : expression . DIVEQ expression  (96)
	binary_assignment : expression . MODEQ expression  (97)
	binary_assignment : expression . PLUSEQ expression  (98)
	binary_assignment : expression . MINUSEQ expression  (99)

	L_BRACK  shift 89
	INCR  shift 99
	DECR  shift 100
	ASSIGN  reduce 67
	MORE  reduce 67
	LESS  reduce 67
	PLUS  reduce 67
	MINUS  reduce 67
	TIMES  reduce 67
	DIV  reduce 67
	MOD  reduce 67
	QUE  reduce 67
	DDOT  reduce 67
	COMMA  reduce 67
	SEMICOLON  reduce 67
	R_PAREN  reduce 67
	R_BRACK  reduce 67
	EQ  reduce 67
	NEQ  reduce 67
	LEQ  reduce 67
	GEQ  reduce 67
	PLUSEQ  reduce 67
	MINUSEQ  reduce 67
	TIMESEQ  reduce 67
	DIVEQ  reduce 67
	MODEQ  reduce 67
	LOGICAL_AND  reduce 67
	LOGICAL_OR  reduce 67


state 67
	expression : ID L_PAREN . expression_list R_PAREN  (57)
	expression_list : .  (68)

	.  reduce 68

	expression_list  goto 109


state 68
	expression : NEW fulltype .  (65)
	expression : NEW fulltype . L_BRACK expression R_BRACK  (66)
